# Daedalus

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  pyproject.toml  test.py  todo.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pytest.yml
daedalus/: __init__.py  _core.pyi  daedalus_cpp.py  daedalus_cpp.pyi  dataframe.py  io.py  matrix.py  metrics.py  model_selection.py  models.py  preprocessing.py
daedalus/_core/: __init__.py  dataframe.py  io.py  matrix.py
daedalus/metrics/: __init__.py  metrics.py
daedalus/model_selection/: __init__.py  model_selection.py
daedalus/models/: __init__.py  knn.py  linear_regression.py  logistic_regression.py  model.py  neural_network.py
daedalus/optimization/: __init__.py  optimization.py  simplex_solver.py
daedalus/preprocessing/: __init__.py  standard_scaler.py
examples/: SimplexSolverEx.py  linearRegressionEx.py  logisticRegressionEx.py
include/daedalus/core/: DataFrame.h  IO.h  Matrix.h  Metrics.h  Preprocessing.h  Utils.h
include/daedalus/models/: DenseLayer.h  Layer.h  Model.h  NeuralNetwork.h  knn.h  linearRegression.h  logisticRegression.h
include/daedalus/optimization/: Optimization.h  SimplexSolver.h
src/bindings/: bindings.cc
src/models/: DenseLayer.cc  NeuralNetwork.cc  knn.cc  linearRegression.cc  logisticRegression.cc
src/optimization/: SimplexSolver.cc
tests/: 01_test_matrix.py  02_test_dataframe.py  03_test_io.py  04_test_model_selection.py  04_test_preprocessing.py  04_test_standard_scaler.py  05_test_model_selection.py  05_test_preprocessing.py  06_test_models.py  07_test_optimization.py  08_test_metrics.py  benchmark_test_matrix.py  test.csv
tools/: clean_build.ps1  clean_build.sh  tree.ps1  tree.sh
