[build-system]
requires = ["scikit-build-core", "pybind11", "pybind11-stubgen"]
build-backend = "scikit_build_core.build"

[project]
name = "daedalus"
dynamic = ["version"]
description = "A Machine Learning library"
requires-python = ">=3.8"
authors = [
    { name = "Daedalus Maintainers" },
]
dependencies = []

[project.optional-dependencies]
test = [
    "numpy",
    "pytest",
    "pytest-cov",
    "pytest-benchmark"
]

[tool.scikit-build]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
ninja.make-fallback = true
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test_*.py", "benchmark_test_*.py"]
addopts = "-m 'not benchmark_test'"
markers = [
    "benchmark_test: marks tests as benchmarks (deselect with '-m \"not benchmark_test\"')"
]